--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .background {
-            background-image: url('strasbourg.jpg'); /* Remplacez 'strasbourg.jpg' par le chemin de votre image */
+            background-image: url('./strasbourg.jpg'); /* Remplacez 'strasbourg.jpg' par le chemin de votre image */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -140,7 +140,7 @@
         <p id="progress-text">Calcul en cours...</p>
         <!-- Afficher la date et l'heure côte à côte -->
         <p id="current-date-time"></p>
-	<img id="current-image" src="logo.jpg" alt="Image supplémentaire">
+	<img id="current-image" src="./logo.jpg" alt="Image supplémentaire">
     </div>    
 
     <!-- Ajouter le script de confettis -->
