--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avancement de la Journée</title>
-    <link rel="icon" href="votre_icone.ico" type="image/x-icon">
+    <link rel="icon" href="./votre_icone.ico" type="image/x-icon">
     <!-- Ajouter le style pour les confettis -->
     <style>
         body {
